@@ -1,15 +1,17 @@
 #!/usr/bin/perl -w
 
 # vnstat-json.cgi -- example cgi for vnStat json output
-# copyright (c) 2015 Teemu Toivola <tst at iki dot fi>
+# copyright (c) 2015-2021 Teemu Toivola <tst at iki dot fi>
 # released under the GNU General Public License
 
 
 # location of vnstat binary
 my $vnstat_cmd = '/usr/bin/vnstat';
 
-# shown interfaces, edit as necessary
-my @interfaces = ('eth0', 'eth1', 'ethX');
+# individually accessible interfaces with ?interface=N
+# for static list, uncomment first line below, update the list and comment out second line
+#my @interfaces = ('eth0', 'eth1');
+my @interfaces = `$vnstat_cmd --dbiflist 1`;
 
 
 ################
